# Demande-DTF

./: .gitignore  README.md  Résultat de Terminal.txt  database.sqlite  imposition-tool.jsx  index.html  main.py  package.json  requirements.txt  server.js  vite.config.js
Desktop/DTF Matrix/oms-api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  cli.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
Desktop/DTF Matrix/oms-api/alembic/: env.py
Desktop/DTF Matrix/oms-api/alembic/versions/: 0001_initial.py  0002_bat.py  0003_order_lines.py  0004_bat_composition.py  0005_drop_users.py  0006_add_prix_unitaire.py  0007_catalog.py  0008_bat_versioning_and_fiche.py  0009_order_status_en_attente_bat.py  0010_multi_reference_orders.py  0011_supplier_catalog.py  0012_client_contact.py  0013_sourcing_special.py  0014_catalog_flash_standard.py  0015_client_ville.py  0016_client_contacts.py  0017_catalog_internal_refs.py  0018_catalog_add_h001.py  0019_rename_sizes_standard.py  0020_fix_sizes_json_corruption.py  (+2 more)
Desktop/DTF Matrix/oms-api/app/: config.py  database.py  logging_config.py  main.py
Desktop/DTF Matrix/oms-api/docs/: IMPORT_CLIENTS.md
Desktop/DTF Matrix/oms-api/scripts/: dedupe_clients.py
Desktop/DTF Matrix/oms-api/tests/: conftest.py  test_admin_parametres.py  test_bat.py  test_catalog.py  test_clients.py  test_drafts.py  test_dropbox_service.py  test_kanban.py  test_orders.py  test_orders_multi_reference.py  test_pricing_engine.py  test_pricing_route.py  test_quotes_route.py  test_supplier_catalog.py
(+329 files in other folders)
