[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oms-api"
version = "0.1.0"
description = "OMS API - FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "OMS Team"},
]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.13.3",
    "pydantic[email]==2.9.2",
    "pydantic-settings==2.6.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.12",
    "python-json-logger==2.0.7",
    "httpx==0.27.2",
    "aiosqlite==0.20.0",
    "typer==0.12.3",
    "click==8.1.7",
    "jinja2==3.1.4",
    "aiosmtplib==3.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "W191",  # indentation contains tabs
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
